// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppDetailInner should match a snapshot when appDetailModalState = VIEW_CONFIRM_INSTALL 1`] = `<AppConfirmInstallContentInnerWithConnect />`;

exports[`AppDetailInner should match a snapshot when appDetailModalState = VIEW_DETAIL_BROWSE 1`] = `
<AppDetailWithConnect
  data={
    Object {
      "description": "enim facilisis",
      "developer": "Pete's Proptech World Ltd",
      "homePage": "http://myawesomeproptechproduct.io",
      "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
      "media": Array [
        Object {
          "description": "Application Icon",
          "type": "icon",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
        },
      ],
      "name": "Peter's Properties",
      "scopes": Array [
        Object {
          "description": "Read data about developers",
          "name": "Marketplace/developers.read",
        },
        Object {
          "description": "Write data about developers",
          "name": "Marketplace/developers.write",
        },
      ],
      "summary": "vitae elementum curabitur vitae",
      "supportEmail": "support@reapit.com",
      "telephone": "0113 288 2900",
    }
  }
  footerItems={
    <Unknown
      dataTest="detail-modal-install-button"
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Install App
    </Unknown>
  }
/>
`;

exports[`AppDetailInner should match a snapshot when appDetailModalState = VIEW_DETAIL_MANAGE 1`] = `
<AppDetailWithConnect
  data={
    Object {
      "description": "enim facilisis",
      "developer": "Pete's Proptech World Ltd",
      "homePage": "http://myawesomeproptechproduct.io",
      "id": "9b6fd5f7-2c15-483d-b925-01b650538e52",
      "media": Array [
        Object {
          "description": "Application Icon",
          "type": "icon",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/7d88729f-2366-4561-9d5c-282615f3946b.jpeg",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/c4a36706-aa44-47f9-9fb6-9053eef4e581.png",
        },
        Object {
          "description": "Application Image",
          "type": "image",
          "uri": "https://reapit-app-store-app-media.s3.eu-west-2.amazonaws.com/65bd3b97-e78c-41cd-b75f-e06e1d2f00df.png",
        },
      ],
      "name": "Peter's Properties",
      "scopes": Array [
        Object {
          "description": "Read data about developers",
          "name": "Marketplace/developers.read",
        },
        Object {
          "description": "Write data about developers",
          "name": "Marketplace/developers.write",
        },
      ],
      "summary": "vitae elementum curabitur vitae",
      "supportEmail": "support@reapit.com",
      "telephone": "0113 288 2900",
    }
  }
  footerItems={
    <Unknown
      dataTest="detail-modal-uninstall-button"
      onClick={[MockFunction]}
      type="button"
      variant="primary"
    >
      Uninstall App
    </Unknown>
  }
/>
`;

exports[`renderFooterAppDetailBrowse should match snapshot when installedOn is true 1`] = `
<div>
  <div
    data-test="detail-modal-installed"
  >
    <FaCheck />
    <span>
      Installed
    </span>
  </div>
</div>
`;

exports[`renderFooterAppDetailBrowse should match snapshot when isInstallBtnHidden is fasle 1`] = `
<div>
  <Component
    dataTest="detail-modal-install-button"
    onClick={[MockFunction]}
    type="button"
    variant="primary"
  >
    Install App
  </Component>
</div>
`;
